# zzz-proj-stub--simple-chatty-bot

./: README.rst  pyproject.toml
bot/: bot.py
